--- a/areaCalc.html
+++ b/areaCalc.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Walking Tracker with Steps</title>
+  <meta charset="UTF-8" />
+  <title>Accurate Walking Tracker</title>
   <style>
-    body { font-family: Arial; text-align: center; margin: 0; }
+    body { font-family: Arial, sans-serif; margin: 0; }
     #map { height: 75vh; width: 100%; }
     button { padding: 10px 20px; margin: 10px; font-size: 16px; }
-    #stats { font-size: 18px; margin-top: 10px; }
+    #stats { text-align: center; font-size: 18px; margin-top: 10px; }
   </style>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
 
-  <h1>Walking Tracker</h1>
   <div id="map"></div>
-  <button onclick="startTracking()">Start</button>
-  <button onclick="stopTracking()">Stop</button>
+  <div style="text-align: center;">
+    <button onclick="startTracking()">Start</button>
+    <button onclick="stopTracking()">Stop</button>
+  </div>
 
   <div id="stats">
     <p><strong>Distance:</strong> <span id="distance">0</span> meters</p>
@@ -29,75 +30,100 @@
     let path = [];
     let totalDistance = 0;
     let polyline;
-    const MIN_DISTANCE = 5; // meters
-    const STEP_LENGTH = 0.762; // average step length in meters
 
-    function initMap(lat, lng) {
-      map = L.map('map').setView([lat, lng], 18);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors'
+    const STEP_LENGTH = 0.762;
+    const MIN_DISTANCE = 5;
+
+    // 🌍 Initialize map with default view
+    function initMap(lat = 20.5937, lng = 78.9629) {
+      map = L.map('map').setView([lat, lng], 18); // zoom level 18 for walking
+      L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap contributors'
       }).addTo(map);
       marker = L.marker([lat, lng]).addTo(map);
       polyline = L.polyline([], { color: 'blue' }).addTo(map);
     }
 
+    // 📍 Start tracking
     function startTracking() {
+      if (!navigator.geolocation) {
+        alert("Geolocation is not supported");
+        return;
+      }
+
       totalDistance = 0;
       path = [];
       document.getElementById("distance").innerText = "0";
       document.getElementById("steps").innerText = "0";
 
-      if (!navigator.geolocation) {
-        alert("Geolocation is not supported by your browser");
-        return;
-      }
-
-      watchId = navigator.geolocation.watchPosition(position => {
-        const { latitude, longitude, accuracy } = position.coords;
-        if (accuracy > 20) return; // filter bad data
-
-        const latlng = L.latLng(latitude, longitude);
+      navigator.geolocation.getCurrentPosition(position => {
+        const { latitude, longitude } = position.coords;
 
         if (!map) {
           initMap(latitude, longitude);
-        }
-
-        marker.setLatLng(latlng);
-        map.panTo(latlng);
-
-        if (path.length > 0) {
-          const last = path[path.length - 1];
-          const distance = latlng.distanceTo(last);
-          if (distance >= MIN_DISTANCE) {
-            totalDistance += distance;
-            path.push(latlng);
-            polyline.addLatLng(latlng);
-
-            // Update UI
-            document.getElementById("distance").innerText = totalDistance.toFixed(2);
-            const steps = Math.floor(totalDistance / STEP_LENGTH);
-            document.getElementById("steps").innerText = steps;
-          }
         } else {
-          path.push(latlng);
+          map.setView([latitude, longitude], 18);
+          marker.setLatLng([latitude, longitude]);
         }
-      }, error => {
-        alert("Error: " + error.message);
-      }, {
-        enableHighAccuracy: true,
-        maximumAge: 1000,
-        timeout: 10000
+
+        // Start watching live movement
+        watchId = navigator.geolocation.watchPosition(pos => {
+          const { latitude, longitude, accuracy } = pos.coords;
+          if (accuracy > 20) return;
+
+          const latlng = L.latLng(latitude, longitude);
+          marker.setLatLng(latlng);
+          map.panTo(latlng);
+
+          if (path.length > 0) {
+            const last = path[path.length - 1];
+            const distance = latlng.distanceTo(last);
+            if (distance >= MIN_DISTANCE) {
+              totalDistance += distance;
+              path.push(latlng);
+              polyline.addLatLng(latlng);
+
+              document.getElementById("distance").innerText = totalDistance.toFixed(2);
+              document.getElementById("steps").innerText = Math.floor(totalDistance / STEP_LENGTH);
+            }
+          } else {
+            path.push(latlng);
+          }
+        }, err => {
+          alert("Error: " + err.message);
+        }, {
+          enableHighAccuracy: true,
+          maximumAge: 500,
+          timeout: 10000
+        });
+
+      }, err => {
+        alert("Error getting initial location: " + err.message);
       });
     }
 
+    // 🛑 Stop tracking
     function stopTracking() {
       if (watchId) {
         navigator.geolocation.clearWatch(watchId);
         watchId = null;
-        alert(`Stopped. Total distance: ${totalDistance.toFixed(2)} meters\nEstimated steps: ${Math.floor(totalDistance / STEP_LENGTH)}`);
+        alert(`Stopped.\nTotal distance: ${totalDistance.toFixed(2)} meters\nEstimated steps: ${Math.floor(totalDistance / STEP_LENGTH)}`);
       }
     }
-  </script>
 
+    // 🌐 Try initializing map on page load
+    window.onload = () => {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(pos => {
+          const { latitude, longitude } = pos.coords;
+          initMap(latitude, longitude);
+        }, () => {
+          initMap(); // fallback default map
+        });
+      } else {
+        initMap(); // fallback
+      }
+    };
+  </script>
 </body>
 </html>
