--- a/areaCalc.html
+++ b/areaCalc.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Land Area Calculator (GPS)</title>
+
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
   <style>
     * {
       box-sizing: border-box;
@@ -22,7 +25,7 @@
       background: #f4f4f4;
       text-align: center;
     }
-    #controls button {
+    #controls button, #controls label {
       padding: 10px 16px;
       margin: 5px;
       font-size: 16px;
@@ -31,16 +34,21 @@
       color: white;
       border-radius: 5px;
       cursor: pointer;
+      user-select: none;
     }
     #controls button:disabled {
       background: #aaa;
       cursor: not-allowed;
+    }
+    #toggleLabel {
+      background: #28a745;
     }
     #info {
       padding: 10px;
       text-align: center;
       font-size: 16px;
       background: #fafafa;
+      user-select: none;
     }
     #info span {
       font-weight: bold;
@@ -53,6 +61,10 @@
     <button id="startBtn">Start</button>
     <button id="stopBtn" disabled>Stop</button>
     <button id="clearBtn">Clear</button>
+    <label id="toggleLabel" for="toggleMap">Satellite View: 
+      <input type="checkbox" id="toggleMap" style="transform: scale(1.2); margin-left: 8px; cursor:pointer;" />
+    </label>
+    <button id="downloadBtn" title="Download Measurement Data">Download</button>
   </div>
 
   <div id="map"></div>
@@ -64,15 +76,26 @@
     🔁 <strong>Perimeter:</strong> <span id="perimeter">0</span> m
   </div>
 
-  <!-- Leaflet and Turf.js -->
+  <!-- Leaflet and Turf.js from CDN -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
 
   <script>
-    const map = L.map('map').setView([20, 77], 5);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19
-    }).addTo(map);
+    // Initialize map with street view as default
+    const streetLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
+    });
+
+    // Satellite imagery layer from ESRI (free for non-commercial use)
+    const satelliteLayer = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/' +
+      'World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+      maxZoom: 19,
+      attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, ' +
+                   'Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+    });
+
+    const map = L.map('map', { layers: [streetLayer] }).setView([20, 77], 5);
 
     let pathPoints = [];
     let polygonLayer = null;
@@ -83,6 +106,9 @@
     const startBtn = document.getElementById('startBtn');
     const stopBtn = document.getElementById('stopBtn');
     const clearBtn = document.getElementById('clearBtn');
+    const toggleMapCheckbox = document.getElementById('toggleMap');
+    const downloadBtn = document.getElementById('downloadBtn');
+
     const areaSqmDisplay = document.getElementById('areaSqm');
     const areaAcresDisplay = document.getElementById('areaAcres');
     const perimeterDisplay = document.getElementById('perimeter');
@@ -97,6 +123,7 @@
         if (distanceToStart <= CLOSE_DISTANCE) {
           stopTracking();
           drawPolygon();
+          alert('Polygon closed automatically.');
           return;
         }
       }
@@ -108,18 +135,24 @@
         map.removeLayer(polygonLayer);
       }
       if (pathPoints.length >= 3) {
-        polygonLayer = L.polygon(pathPoints, { color: 'green' }).addTo(map);
+        polygonLayer = L.polygon(pathPoints, { color: 'green', fillOpacity: 0.3 }).addTo(map);
         calculateArea();
       }
     }
 
     function calculateArea() {
+      if (pathPoints.length < 3) {
+        areaSqmDisplay.innerText = "0";
+        areaAcresDisplay.innerText = "0";
+        perimeterDisplay.innerText = "0";
+        return;
+      }
       const coords = pathPoints.map(p => [p.lng, p.lat]);
-      coords.push([pathPoints[0].lng, pathPoints[0].lat]); // Close the polygon
+      coords.push([pathPoints[0].lng, pathPoints[0].lat]); // close polygon
 
       const polygon = turf.polygon([coords]);
       const areaSqm = turf.area(polygon);
-      const areaAcres = areaSqm * 0.000247105; // convert sq meters to acres
+      const areaAcres = areaSqm * 0.000247105; // sq meters to acres
       const perimeter = turf.length(turf.lineString(coords), { units: 'meters' });
 
       areaSqmDisplay.innerText = areaSqm.toFixed(2);
@@ -172,21 +205,60 @@
         map.removeLayer(polygonLayer);
         polygonLayer = null;
       }
-
       map.eachLayer(layer => {
         if (layer instanceof L.CircleMarker) {
           map.removeLayer(layer);
         }
       });
-
       areaSqmDisplay.innerText = "0";
       areaAcresDisplay.innerText = "0";
       perimeterDisplay.innerText = "0";
     }
 
+    toggleMapCheckbox.addEventListener('change', () => {
+      if (toggleMapCheckbox.checked) {
+        map.removeLayer(streetLayer);
+        map.addLayer(satelliteLayer);
+      } else {
+        map.removeLayer(satelliteLayer);
+        map.addLayer(streetLayer);
+      }
+    });
+
+    function downloadData() {
+      const areaM2 = areaSqmDisplay.innerText;
+      const areaAcres = areaAcresDisplay.innerText;
+      const perimeterM = perimeterDisplay.innerText;
+      if (areaM2 === "0" && perimeterM === "0") {
+        alert("No measurement data to download.");
+        return;
+      }
+      const content = 
+`Land Measurement Data:
+-----------------------
+Area: ${areaM2} m²
+Area: ${areaAcres} acres
+Perimeter: ${perimeterM} meters
+Points recorded: ${pathPoints.length}
+
+Date: ${new Date().toLocaleString()}
+`;
+      const blob = new Blob([content], { type: 'text/plain' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'land_measurement.txt';
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      URL.revokeObjectURL(url);
+    }
+
     startBtn.addEventListener('click', startTracking);
     stopBtn.addEventListener('click', stopTracking);
     clearBtn.addEventListener('click', clearMap);
+    downloadBtn.addEventListener('click', downloadData);
+
   </script>
 </body>
 </html>
