--- a/areaCalc.html
+++ b/areaCalc.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -64,7 +64,7 @@
     🔁 <strong>Perimeter:</strong> <span id="perimeter">0</span> m
   </div>
 
-  <!-- Leaflet and Turf.js -->
+  Leaflet and Turf.js
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
 
